# beacon-hf

./: .gitignore  README.md  cache_tokens.py  dist_dataloader.py  launch_distributed.sh  main.py  pyproject.toml  samples.jsonl  seed.py  test_data.py  train.py
beacon/: __init__.py  cache_dataset.py  data.py  dist_dataloader.py  train.py  val_sample.py
tests/: load_dataset.py
