[project]
name = "beacon-hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]
